--- a/index.html
+++ b/index.html
@@ -1,9 +1,74 @@
 <!DOCTYPE html>
 <html>
   <head>
-        <title>Secret Agent Supply</title>
+        <title>Secret Agent Supply Inc.</title>
+        <link rel="stylesheet" href="resources/css/reset.css" type="text/css">
+        <link rel="stylesheet" href="resources/css/style.css" type="text/css">
   </head>
   <body>
+    <div class="container">
+      <div class="header">
+        <img src="resources/logo.png" alt="glasses">
+        <h3>SECRET AGENT SUPPLY INC.</h3>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="new">
+        <div class="bikes">
+          <h3>NEW ARRIVAL</h3>
+          <h1>SPORT BIKES AND MOTORCYCLES</h1>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="nav">
+        <nav>
+          <span>Eyewear</span>
+          <span>Apparel</span>
+          <span>Gadgets</span>
+          <span>Vehicles</span>
+          <span>Classes</span>
+          <span>Contact</span>
+        </nav>
+
+      </div>
+
+    </div>
+
+    <div class="container">
+      <div class="inventory">
+        <div class="item">
+          <img src="resources/pen.png" alt="pen">
+          <span>Exploding Pen</span>
+        </div>
+        <div class="item">
+          <img src="resources/watch.png" alt="watch">
+          <span>Cellular Watch</span>
+        </div>
+        <div class="item">
+          <img src="resources/glasses.png" alt="glasses">
+          <span>Thermal Glasses</span>
+        </div>
+      </div>
+    </div>
+
+<div class="container">
+  <div class="contact">
+    <h3>Location</h3>
+    <h4>-47.346436, 84.32354</h4>
+  </div>
+  <div class="contact">
+    <h3>Hours</h3>
+    <h4>0800 - 1800</h4>
+  </div>
+</div>
+
+<div class="container">
+  Copyright Secret Agent Supply Inc.
+</div>
+
 
   </body>
 </html>
