--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="resources/css/style.css" type="text/css">
   </head>
   <body>
+    <div class="sitecontainer">
     <div class="container">
       <div class="header">
         <img src="resources/logo.png" alt="glasses">
@@ -14,8 +15,8 @@
     </div>
 
     <div class="container">
-      <div class="new">
-        <div class="bikes">
+      <div class="banner">
+        <div class="newarrival">
           <h3>NEW ARRIVAL</h3>
           <h1>SPORT BIKES AND MOTORCYCLES</h1>
         </div>
@@ -38,18 +39,18 @@
     </div>
 
     <div class="container">
-      <div class="inventory">
+      <div class="products">
         <div class="item">
           <img src="resources/pen.png" alt="pen">
-          <span>Exploding Pen</span>
+          <p>Exploding Pen</p>
         </div>
         <div class="item">
           <img src="resources/watch.png" alt="watch">
-          <span>Cellular Watch</span>
+          <p>Cellular Watch</p>
         </div>
         <div class="item">
           <img src="resources/glasses.png" alt="glasses">
-          <span>Thermal Glasses</span>
+          <p>Thermal Glasses</p>
         </div>
       </div>
     </div>
@@ -65,10 +66,10 @@
   </div>
 </div>
 
-<div class="container">
+<div class="footer">
   Copyright Secret Agent Supply Inc.
 </div>
-
+</div>
 
   </body>
 </html>
