--- a/index.html
+++ b/index.html
@@ -26,12 +26,18 @@
     <div class="container">
       <div class="nav">
         <nav>
-          <span>Eyewear</span>
-          <span>Apparel</span>
-          <span>Gadgets</span>
-          <span>Vehicles</span>
-          <span>Classes</span>
-          <span>Contact</span>
+          <ul>
+            <li>Eyewear</li>
+            <li>Apparel</li>
+            <li>Gadgets</li>
+            <li>Vehicles</li>
+            <li>Glasses</li>
+            <li>Contact</li>
+            </ul>
+
+            <ul class="mobile-nav">
+              <li>menu</li>
+            </ul>
         </nav>
 
       </div>
@@ -41,27 +47,37 @@
     <div class="container">
       <div class="products">
         <div class="item">
+          <div class="pen">
           <img src="resources/pen.png" alt="pen">
-          <p>Exploding Pen</p>
+          </div>
+          <span class="description">Exploding Pen</span>
         </div>
         <div class="item">
+          <div class="watch">
           <img src="resources/watch.png" alt="watch">
-          <p>Cellular Watch</p>
+        </div>
+          <span class="description">Cellular Watch</span>
         </div>
         <div class="item">
+          <div class="glasses">
           <img src="resources/glasses.png" alt="glasses">
-          <p>Thermal Glasses</p>
+          </div>
+          <span class=description>Thermal Glasses</span>
         </div>
       </div>
     </div>
 
 <div class="container">
-  <div class="contact">
+  <div class="info">
+    <div class="title">
     <h3>Location</h3>
+    </div>
     <h4>-47.346436, 84.32354</h4>
   </div>
-  <div class="contact">
+  <div class="info">
+    <div class="title">
     <h3>Hours</h3>
+    </div>
     <h4>0800 - 1800</h4>
   </div>
 </div>
